gitops/apps/base/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashy
spec:
  selector:
    app: dashy
  ports:
    - port: 80
      targetPort: 8080
