gitops/apps/base/dashy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dashy
  namespace: dashy
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - dev.scw.sovereigncloudwisdom.eu
  rules:
    - backendRefs:
        - name: dashy
          port: 80
